# haskell-es-example

./: .gitignore  LICENSE  README.md  haskell-es-exe  haskell-es.cabal  stack.yaml
app/: Main.hs
src/: Aggregate.hs  Repository.hs
src/Model/: Card.hs
