name:                haskell-es
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/alexeyraga/haskell-es#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Arbor Networks
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, Aggregate, Model.Card
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6
                     , text >= 1.2.1
                     , containers >= 0.5.6
                     , aeson
                     , eventstore >= 0.8
                     , protobuf >= 0.2.1
                     , streaming >= 0.1.2
                     , streaming-bytestring >= 0.1.2
  default-language:    Haskell2010

executable haskell-es-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-es
                     , bytestring >= 0.10.6
                     , text >= 1.2.1
                     , containers >= 0.5.6
                     , aeson
                     , eventstore >= 0.8
                     , protobuf >= 0.2.1
                     , streaming >= 0.1.2
                     , streaming-bytestring >= 0.1.2
  default-language:    Haskell2010

test-suite haskell-es-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-es
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexeyraga/haskell-es
